--- a/iPayDemoProject/Base.lproj/Main.storyboard
+++ b/iPayDemoProject/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,77 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwd-qs-vYD">
+                                <rect key="frame" x="0.0" y="0.0" width="187" height="70"/>
+                                <color key="backgroundColor" red="0.72237668209999994" green="0.88806640619999999" blue="0.65069256259999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="VnH-5x-JSC"/>
+                                </constraints>
+                                <state key="normal" title="Capital City"/>
+                                <connections>
+                                    <action selector="capitalCityClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Si-uQ-aqx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOH-aK-EHI">
+                                <rect key="frame" x="188" y="0.0" width="187" height="70"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="pz3-Ky-ayl"/>
+                                </constraints>
+                                <state key="normal" title="Calling Code"/>
+                                <connections>
+                                    <action selector="callingCodeClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Az-Up-P9i"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="capitalCity.png" translatesAutoresizingMaskIntoConstraints="NO" id="LV1-BS-zdQ">
+                                <rect key="frame" x="75" y="1" width="33" height="27"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="callingCode.png" translatesAutoresizingMaskIntoConstraints="NO" id="TUK-80-g0n">
+                                <rect key="frame" x="267" y="1" width="33" height="29"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="84" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9MR-ad-f98">
+                                <rect key="frame" x="0.0" y="69" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="3Af-dt-B4H"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="BZF-Vd-aDf"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="9MR-ad-f98" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="49" id="0wl-Z5-JrT"/>
+                            <constraint firstItem="mOH-aK-EHI" firstAttribute="width" secondItem="Dwd-qs-vYD" secondAttribute="width" id="1eJ-sp-qaW"/>
+                            <constraint firstItem="mOH-aK-EHI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1xz-Hr-U34"/>
+                            <constraint firstItem="mOH-aK-EHI" firstAttribute="leading" secondItem="Dwd-qs-vYD" secondAttribute="trailing" constant="1" id="EiD-RX-YNF"/>
+                            <constraint firstItem="Dwd-qs-vYD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gak-Bp-exG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9MR-ad-f98" secondAttribute="bottom" id="Pv1-JI-tgX"/>
+                            <constraint firstItem="LV1-BS-zdQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="59" id="SLe-qH-7AH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TUK-80-g0n" secondAttribute="trailing" constant="59" id="bHR-H8-D5r"/>
+                            <constraint firstItem="Dwd-qs-vYD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cXW-lj-HzH"/>
+                            <constraint firstAttribute="trailing" secondItem="mOH-aK-EHI" secondAttribute="trailing" id="gFp-rK-R3E"/>
+                            <constraint firstAttribute="trailing" secondItem="9MR-ad-f98" secondAttribute="trailing" id="hDY-Wk-xTk"/>
+                            <constraint firstItem="TUK-80-g0n" firstAttribute="leading" secondItem="Dwd-qs-vYD" secondAttribute="trailing" constant="80" id="hyq-tq-IcL"/>
+                            <constraint firstItem="TUK-80-g0n" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="1" id="n2D-LX-xJA"/>
+                            <constraint firstItem="LV1-BS-zdQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="1" id="sqL-8v-Vsx"/>
+                            <constraint firstItem="9MR-ad-f98" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uOR-wh-mWc"/>
+                            <constraint firstItem="mOH-aK-EHI" firstAttribute="leading" secondItem="LV1-BS-zdQ" secondAttribute="trailing" constant="80" id="v6v-rx-7UQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="callingCodeButton" destination="mOH-aK-EHI" id="0IB-tf-oWm"/>
+                        <outlet property="capitalCityButton" destination="Dwd-qs-vYD" id="fA4-OB-7Cq"/>
+                        <outlet property="countryInfoTableView" destination="9MR-ad-f98" id="T1G-gn-3A5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="callingCode.png" width="31" height="29"/>
+        <image name="capitalCity.png" width="33" height="27"/>
+    </resources>
 </document>
